--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/sdf8057/ipq6000
   REPO_BRANCH: master
 
 on:
